<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackgroundFloating"
    android:orientation="vertical"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_sans_bold"
            android:textSize="24sp"
            android:textColor="@color/bluePrimary"
            android:text="@string/register_title_grammar"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/product_sans_medium"
            android:textSize="18sp"
            android:textColor="?attr/colorScheme"
            android:text="@string/register_grammar"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/field"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:background="@drawable/card_bg"
        android:paddingRight="30dp"
        android:paddingLeft="30dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingBottom="60dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/product_sans_bold"
                    android:textSize="18sp"
                    android:textColor="@color/bluePrimary"
                    android:text="@string/full_name"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/input_field_bg"
                    android:paddingTop="9dp"
                    android:paddingBottom="9dp"
                    android:paddingStart="17dp"
                    android:fontFamily="@font/product_sans_regular"
                    android:textColor="?attr/colorError"
                    android:textColorHint="?attr/colorError"
                    android:textSize="14sp"
                    android:hint="@string/ex_steve_mashon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/product_sans_bold"
                    android:textSize="18sp"
                    android:textColor="@color/bluePrimary"
                    android:text="@string/id_card_market"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_card"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/input_field_bg"
                    android:paddingTop="9dp"
                    android:paddingBottom="9dp"
                    android:paddingStart="17dp"
                    android:fontFamily="@font/product_sans_regular"
                    android:textColor="?attr/colorError"
                    android:textColorHint="?attr/colorError"
                    android:textSize="14sp"
                    android:hint="@string/ex_07_b6_bb_b5"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/product_sans_bold"
                    android:textSize="18sp"
                    android:textColor="@color/bluePrimary"
                    android:text="@string/email"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_address"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/input_field_bg"
                    android:paddingTop="9dp"
                    android:paddingBottom="9dp"
                    android:paddingStart="17dp"
                    android:fontFamily="@font/product_sans_regular"
                    android:textColor="?attr/colorError"
                    android:textColorHint="?attr/colorError"
                    android:textSize="14sp"
                    android:hint="@string/email_field"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/product_sans_bold"
                    android:textSize="18sp"
                    android:textColor="@color/bluePrimary"
                    android:text="@string/password"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/input_field_bg"
                    android:paddingTop="9dp"
                    android:paddingBottom="9dp"
                    android:paddingStart="17dp"
                    android:fontFamily="@font/product_sans_regular"
                    android:textColor="?attr/colorError"
                    android:textColorHint="?attr/colorError"
                    android:textSize="14sp"
                    android:hint="@string/ex_p4s5w012d"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/product_sans_bold"
                    android:textSize="18sp"
                    android:textColor="@color/bluePrimary"
                    android:text="@string/confirm_password"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/input_field_bg"
                    android:paddingTop="9dp"
                    android:paddingBottom="9dp"
                    android:paddingStart="17dp"
                    android:fontFamily="@font/product_sans_regular"
                    android:textColor="?attr/colorError"
                    android:textColorHint="?attr/colorError"
                    android:textSize="14sp"
                    android:hint="@string/pw_confirm"/>

                <Button
                    android:id="@+id/register"
                    android:layout_width="190dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/login_button"
                    android:text="@string/register"
                    android:fontFamily="@font/product_sans_bold"
                    android:textSize="20sp"
                    android:textColor="@color/lightSty"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/to_login"
                    android:layout_width="250dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/register_bg"
                    android:text="@string/do_login"
                    android:fontFamily="@font/product_sans_medium"
                    android:textSize="18sp"
                    android:textColor="?attr/colorScheme"
                    android:textAllCaps="false" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</LinearLayout>