<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorBackgroundFloating">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="109dp">



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_layout_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/product_sans_bold"
                android:textSize="16sp"
                android:textColor="@color/bluePrimary"
                android:text="@string/tap_pay"/>

            <ImageView
                android:id="@+id/owner_pay_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_pay_icon"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/owner_pay_icon"
                android:layout_marginStart="13dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/product_sans_regular"
                android:textSize="16sp"
                android:textColor="?attr/colorError"
                android:text="@string/saldo"/>

            <TextView
                android:id="@+id/owner_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/owner_pay_icon"
                android:layout_marginStart="13dp"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/product_sans_bold"
                android:textSize="18sp"
                android:textColor="?attr/color"
                android:text="@string/rp0"/>

            <RelativeLayout
                android:id="@+id/owner_layout_about"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true">

                <ImageView
                    android:id="@+id/owner_about_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_about_icon"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/todo" />

            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/owner_layout_about"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_line_vertical"
                android:contentDescription="@string/todo" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_profile"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profile"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/product_sans_bold"
                    android:textSize="18sp"
                    android:textColor="?attr/color"
                    android:text="@string/profil"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:src="@drawable/ic_map"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/map"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/product_sans_bold"
                    android:textSize="18sp"
                    android:textColor="?attr/color"
                    android:text="@string/denah_pasar"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/kiosk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/ic_kios"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/kiosk"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/product_sans_bold"
                    android:textSize="18sp"
                    android:textColor="?attr/color"
                    android:text="@string/kios"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/ic_logout"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logout"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="28dp"
                    android:fontFamily="@font/product_sans_bold"
                    android:textSize="18sp"
                    android:textColor="?attr/color"
                    android:text="@string/logout"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>